Minor api modifications
    Update get template description.

    Rename `template` to `filename` in template get.

    Make necessary modifications to other code.
